src/pcl/pxd/point_types.pxd

# Auto-generated by cppast2autopxd 0.1.0 from point_types.h.
# Do not edit by hand; re-run the generator instead.

# distutils: language = c++

from libc.stdint cimport uint32_t
from libc.stdint cimport uint8_t

cdef extern from "pcl/point_types.h" namespace "pcl" nogil:
    cdef struct PointXYZ:
        float x
        float y
        float z
        float data[4]

    cdef struct PointXYZI:
        float x
        float y
        float z
        float data[4]
        float intensity
        float data_c[4]

    cdef struct PointXYZRGB:
        float x
        float y
        float z
        float data[4]
        uint8_t b
        uint8_t g
        uint8_t r
        uint8_t a
        float rgb
        uint32_t rgba

    cdef struct PointXYZRGBA:
        float x
        float y
        float z
        float data[4]
        uint8_t b
        uint8_t g
        uint8_t r
        uint8_t a
        float rgb
        uint32_t rgba

    cdef struct Normal:
        float normal_x
        float normal_y
        float normal_z
        float data_n[4]
        float curvature
        float data_c[4]

    cdef struct PointNormal:
        float x
        float y
        float z
        float data[4]
        float normal_x
        float normal_y
        float normal_z
        float data_n[4]
        float curvature
        float data_c[4]

    cdef struct VFHSignature308:
        float histogram[308]
